chrome/browser/ui/views/toolbar/toolbar_actions_bar_bubble_views.cc
@@ -5,7 +5,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "chrome/browser/ui/views/toolbar/toolbar_actions_bar_bubble_views.h"
 
-#include "chrome/browser/ui/toolbar/toolbar_actions_bar_bubble_delegate.h"
 #include "chrome/browser/ui/views/harmony/layout_delegate.h"
 #include "chrome/grit/locale_settings.h"
 #include "ui/base/resource/resource_bundle.h"
@@ -29,6 +28,8 @@ ToolbarActionsBarBubbleViews::ToolbarActionsBarBubbleViews(
     : views::BubbleDialogDelegateView(anchor_view,
                                       views::BubbleBorder::TOP_RIGHT),
       delegate_(std::move(delegate)),
+      close_reason_(
+          ToolbarActionsBarBubbleDelegate::CLOSE_DISMISS_DEACTIVATION),
       item_list_(nullptr),
       link_(nullptr),
       anchored_to_action_(anchored_to_action) {
@@ -101,10 +102,7 @@ bool ToolbarActionsBarBubbleViews::Accept() {
 }
 
 bool ToolbarActionsBarBubbleViews::Close() {
-  if (delegate_) {
-    delegate_->OnBubbleClosed(
-        ToolbarActionsBarBubbleDelegate::CLOSE_DISMISS_DEACTIVATION);
-  }
+  delegate_->OnBubbleClosed(close_reason_);
   return true;
 }
 
@@ -164,8 +162,6 @@ base::string16 ToolbarActionsBarBubbleViews::GetDialogButtonLabel(
 
 void ToolbarActionsBarBubbleViews::LinkClicked(views::Link* link,
                                                int event_flags) {
-  delegate_->OnBubbleClosed(ToolbarActionsBarBubbleDelegate::CLOSE_LEARN_MORE);
-  // Reset delegate so we don't send extra OnBubbleClosed()s.
-  delegate_.reset();
+  close_reason_ = ToolbarActionsBarBubbleDelegate::CLOSE_LEARN_MORE;
   GetWidget()->Close();
 }
